--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-streamlit
-python-dotenv
-langchain
-langchain-community
-langchain-core
-langchain-groq
-langchain-huggingface
-langchain-chroma
-PyMuPDF
+streamlit==1.33.0
+python-dotenv==1.0.1
+langchain==0.1.14
+langchain-community==0.0.29
+langchain-core==0.1.35
+langchain-groq==0.0.4
+langchain-huggingface==0.0.6
+langchain-chroma==0.1.0
+chromadb==0.4.24
+PyMuPDF==1.23.22
+protobuf==4.25.3
+open-telemetry-api==1.23.0
+opentelemetry-exporter-otlp-proto-grpc==1.23.0
