--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,42 @@
 # Core
-streamlit>=1.20.0
-python-dotenv>=1.0.0
-ipykernel>=6.16.0
+streamlit==1.32.2
+python-dotenv==1.0.1
+ipykernel==6.29.4
 
-# LangChain & Extensions (0.3.x series for compatibility)
-langchain>=0.3.14,<0.4.0
-langchain-core>=0.3.14,<0.4.0
-langchain-community>=0.3.14,<0.4.0
-langchain-groq>=0.2.4,<0.3.0
-langchain-huggingface>=0.1.2,<0.2.0
-langchain-chroma>=0.1.0,<0.3.0
-langchain-text-splitters>=0.2.0,<0.4.0
+# LangChain & extensions
+langchain==0.3.43
+langchain-core==0.3.43
+langchain-community==0.3.43
+langchain-groq==0.2.5
+langchain-huggingface==0.1.3
+langchain-chroma==0.1.1
+langchain-text-splitters==0.3.0
 
-# Pydantic (required for LangChain >= 0.3.14)
-pydantic>=2.7.1,<3.0.0
+# Pydantic
+pydantic==2.7.1
 
-# Vector Databases
-chromadb>=0.3.27,<0.4.0
-faiss-cpu>=1.7.4
+# Vector DBs
+chromadb==0.4.22
+faiss-cpu==1.7.4
 
-# PDF Handling
-pymupdf>=1.23.1
-pypdf>=3.10.0
+# PDF handling
+pypdf==3.17.0
+pymupdf==1.23.20
 
-# Embeddings & Transformers
-sentence-transformers>=2.2.2
-huggingface-hub>=0.17.0
-torch>=2.0.1
+# Transformers & embeddings
+sentence-transformers==2.2.2
+huggingface-hub==0.22.2
+torch==2.2.2
 
-# Utilities
-duckdb>=0.8.1
-pandas>=2.0.2
-numpy>=1.24.0,<2.0
-wikipedia>=1.4.0
-beautifulsoup4>=4.12.2
-arxiv>=1.4.0
+# Data & utilities
+duckdb==0.10.0
+pandas==2.2.2
+wikipedia==1.4.0
+beautifulsoup4==4.12.3
+arxiv==1.4.8
 
-# Optional LangSmith (telemetry/debugging)
-langsmith>=0.0.7
+# LLM monitoring
+langsmith==0.1.40
+
+# Numerical
+numpy==1.26.4
