--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,45 @@
 # Core
-streamlit==1.32.2
-python-dotenv==1.0.1
-ipykernel==6.29.4
+streamlit>=1.20.0
+python-dotenv>=1.0.0
+ipykernel>=6.16.0
 
-# LangChain & extensions
-langchain==0.3.43
-langchain-core==0.3.43
-langchain-community==0.3.43
-langchain-groq==0.2.5
-langchain-huggingface==0.1.3
-langchain-chroma==0.1.1
-langchain-text-splitters==0.3.0
+# LangChain & extensions (all <0.4.0)
+langchain>=0.3.14,<0.4.0
+langchain-core>=0.3.14,<0.4.0
+langchain-community>=0.3.14,<0.4.0
+langchain-groq>=0.2.4,<0.3.0
+langchain-huggingface>=0.1.2,<0.2.0
+langchain-chroma>=0.1.0,<0.3.0
+langchain-text-splitters>=0.2.0,<0.4.0
 
-# Pydantic
-pydantic==2.7.1
+# Pydantic v2 for LangChain 0.3.x
+pydantic>=2.7.4,<3.0.0
 
-# Vector DBs
-chromadb==0.4.22
-faiss-cpu==1.7.4
+# Vector database
+chromadb>=0.3.27
+faiss-cpu>=1.7.4
 
 # PDF handling
-pypdf==3.17.0
-pymupdf==1.23.20
+pypdf>=3.10.0
+pymupdf>=1.23.1
 
 # Transformers & embeddings
-sentence-transformers==2.2.2
-huggingface-hub==0.22.2
-torch==2.2.2
+sentence-transformers>=2.2.2
+huggingface-hub>=0.17.0
+torch>=2.0.1
 
 # Data & utilities
-duckdb==0.10.0
-pandas==2.2.2
-wikipedia==1.4.0
-beautifulsoup4==4.12.3
-arxiv==1.4.8
+duckdb>=0.8.1
+pandas>=2.0.2
+wikipedia>=1.4.0
+beautifulsoup4>=4.12.2
+arxiv>=1.4.0
 
-# LLM monitoring
-langsmith==0.1.40
+# LLMs & other APIs
+
+langsmith>=0.0.7
 
 # Numerical
-numpy==1.26.4
+numpy>=1.24.0,<2.0
+
+sentence-transformers
